--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,8 @@
-name: pytorch_cuda_10_2
+name: pytorch_v1_cuda_10_2
 channels:
+  - conda-forge
   - defaults
+  - pytorch
 dependencies:
   - cudatoolkit=10.2
   - torchaudio
@@ -9,6 +11,5 @@ dependencies:
   - uproot
   - pandas
   - matplotlib
-  - tensorflow
-  - tensorflow-datasets
-prefix: /work/sesanche/anaconda3/envs/pytorch_cuda_10_2
+  - uproot3-methods
+prefix: /work/sesanche/anaconda3/envs/pytorch_v1_cuda_10_2
